# CrestEngine

CrestEngine/: CMakeLists.txt  CrestEngine.sln  Directory.Build.props  vcpkg.json
CrestEngine/CrestEngine/: BoxCollider.h  Camera.cpp  Camera.h  Collider.h  Collision.cpp  Collision.h  CrestEngine.vcxproj  CrestEngine.vcxproj.filters  CrestEngineGraphicsOpenGL.cpp  Cube.obj.binaryThingy  Cube2.obj.binaryThingy  CubeGraphicsD3D11.cpp  CubeGraphicsGL.cpp  CubeGraphicsOpenGL.cpp  DxUtility.h  Entities.cpp  Entities.h  EntityProperty.cpp  EntityProperty.h  Flag.obj.binaryThingy  GeneralProperty.cpp  GeneralProperty.h  GitHub.txt  GraphicProperty.cpp  GraphicProperty.h  GraphicsAPI_OpenGL.cpp  ImguiManager.cpp  ImguiManager.h  Input.cpp  Input.h  Interface.h  Intersect.cpp  Intersect.h  Level.binaryThingy  Level.cpp  Level.h  Materials.h  Math.cpp  Math.h  MemoryChecker.cpp  (+39 more)
CrestEngine/CrestEngine/Debug-VR/: CrestEngine.exe.recipe  CrestEngine.vcxproj.FileListAbsolute.txt  vc143.idb
CrestEngine/CrestEngine/Shaders/: firstshader.fs.txt  lightingshader.fs.txt  lightingshader.vs.txt  lightshader.fs.txt  lightshader.vs.txt  normalviewshader.fs.txt  normalviewshader.vs.txt  shadowmapping.fs.txt  texturedirectionallightingshader.fs.txt  texturedirectionallightingshader.vs.txt  texturelightingshader.fs.txt  texturespotlightingshader.fs.txt
CrestEngine/Dependencies/Common/: GraphicsAPI.h  GraphicsAPI_OpenGL.h  HelperFunctions.h  OpenXRHelper.h
CrestEngine/Dependencies/Glad/glad/: egl.h  gl.h  glad.h  wgl.h
CrestEngine/Dependencies/OpenXR-MixedReality-main/: README.md
CrestEngine/Dependencies/OpenXR-SDK-main/include/openxr/: openxr_platform.h
CrestEngine/Testing/: Testing.vcxproj
